syntax = "proto3";

package go.micro.srv.db;

service Config {
    rpc CreateIndex(CreateIndexRequest) returns (CreateIndexResponse) {}
    rpc Status(StatusRequest) returns (StatusResponse) {}
    rpc AddAlias(AddAliasRequest) returns (AddAliasResponse) {}
    rpc DeleteIndex(DeleteIndexRequest) returns (DeleteIndexResponse) {}
    rpc DeleteAlias(DeleteAliasRequest) returns (DeleteAliasResponse) {}
    rpc RenameAlias(RenameAliasRequest) returns (RenameAliasResponse) {}
}

message DocRef {
    string index = 1;
    string type = 2;
    string id = 3;
}

message BulkCreateRequest {
    string index = 1;
    string type = 2;
    string id = 3;
    string data = 4;
}

message BulkCreateResponse {

}

message CreateIndexRequest {
    string index = 1;
}

message CreateIndexResponse {

}

message StatusRequest {

}

message StatusResponse {
    string status = 1;
}

message AddAliasRequest {
    string index = 1;
    string alias = 2;
}

message AddAliasResponse {

}

message DeleteIndexRequest {
    string index = 1;
}

message DeleteIndexResponse {

}

message DeleteAliasRequest {
    string index = 1;
    string alias = 2;
}

message DeleteAliasResponse {

}

message RenameAliasRequest {
    string index = 1;
    string old_alias = 2;
    string new_alias = 3;
}

message RenameAliasResponse {

}
