syntax = "proto3";

package go.micro.srv.elastic;

service Elastic {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc BulkCreate(BulkCreateRequest) returns (BulkCreateResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc Search(SearchRequest) returns (SearchResponse) {}
  rpc Query(QueryRequest) returns (QueryResponse) {}
  rpc CreateIndexWithSettings(CreateIndexWithSettingsRequest) returns (CreateIndexWithSettingsResponse) {}
  rpc PutMappingFromJSON(PutMappingFromJSONRequest) returns (PutMappingFromJSONRequest) {}
}

message DocRef {
  string index = 1;
  string type = 2;
	string id = 3;
}

message CreateRequest {
  string index = 1;
  string type = 2;
  string id = 3;
  string data = 4;
}

message CreateResponse {

}

message BulkCreateRequest {
  string index = 1;
  string type = 2;
  string id = 3;
  string data = 4;
}

message BulkCreateResponse {
}
message ReadRequest {
  string index = 1;
  string type = 2;
  string id = 3;
}

message ReadResponse {
  string result = 1;
}

message UpdateRequest {
  string index = 1;
  string type = 2;
	string id = 3;
	string data = 4;
}

message UpdateResponse {

}

message DeleteRequest {
  string index = 1;
  string type = 2;
	string id = 3;
}

message DeleteResponse {

}

message SearchRequest {
  string index = 1;
  string type = 2;
  string query = 3;
  int64 limit = 4;
  int64 offset = 5;
}

message SearchResponse {
  string result = 1;
}

message QueryRequest {
  string index = 1;
  string type = 2;
  string query = 3;
}

message QueryResponse {
  string result = 1;
}

message CreateIndexWithSettingsRequest {
  string index = 1;
  string settings = 2;
}

message CreateIndexWithSettingsResponse {

}

message PutMappingFromJSONRequest {
  string index = 1;
  string type = 2;
  string mapping = 3;
}

message PutMappingFromJSONResponse {

}
